--- a/titlepage.tex
+++ b/titlepage.tex
@@ -18,20 +18,20 @@
         {Ситковец \\ Яна Сергеевна}\\
         \vspace{1cm}
 
-        {\bfseries НЕЙРОСЕТЕВЫЕ МЕТОДЫ АСУТП}\\
+        {\bfseries НЕЙРОСЕТЕВЫЕ МЕТОДЫ УПРАВЛЕНИЯ В АСУТП}\\
         \vspace{2cm}
         Диссертация потенциально будущего\\
         магистра технических наук\\
         \bigskip
 
-        по специальности 05.13.17 -- Теоретические основы информатики
+        по специальности 7-06-0611-03 -- Искусственный интеллект
     \end{center}
     \vspace{3cm}
 
     \begin{tabbing}
         \hspace{8cm} \= \kill \>
         Научный руководитель \+ \\
-        будущий кандидат технических наук, будущий доцент\\
+        будущий кандидат технических наук, \\будущий доцент\\
         Иванюк Д. С.
     \end{tabbing}
 
