Change university in titlepage

--- a/titlepage.tex
+++ b/titlepage.tex
@@ -7,7 +7,7 @@
         % {Учреждение образования}
         \medskip
 
-        {БЕЛОРУССКИЙ ГОСУДАРСТВЕННЫЙ УНИВЕРСИТЕТ}
+        {БРЕСТСКИЙ ГОСУДАРСТВЕННЫЙ ТЕХНИЧЕСКИЙ УНИВЕРСИТЕТ}
     \end{center}
     \vspace{1cm}
 
