--- a/1_title.tex
+++ b/1_title.tex
@@ -1,4 +1,4 @@
- % !TEX encoding = UTF-8 Unicode
+% !TEX encoding = UTF-8 Unicode
 \begin{titlepage}
 
     \begin{center} \bfseries
@@ -18,9 +18,9 @@
         {Ситковец \\ Яна Сергеевна}\\
         \vspace{1cm}
 
-        {\bfseries НЕЙРОСЕТЕВЫЕ МЕТОДЫ УПРАВЛЕНИЯ В АСУТП}\\
+        {\bfseries РАЗРАБОТКА И РЕАЛИЗАЦИЯ ЭФФЕКТИВНОГО АЛГОРИТМА ПЛАНИРОВАНИЯ ПРОИЗВОДСТВА}\\
         \vspace{2cm}
-        Диссертация потенциально будущего\\
+        Диссертация на соискание ученой степени\\
         магистра технических наук\\
         \bigskip
 
@@ -31,7 +31,7 @@
     \begin{tabbing}
         \hspace{8cm} \= \kill \>
         Научный руководитель \+ \\
-        будущий кандидат технических наук, \\будущий доцент\\
+        кандидат технических наук, \\будущий доцент\\
         Иванюк Д. С.
     \end{tabbing}
 
@@ -43,11 +43,11 @@
         \end{center}
         \vspace{3cm}
     \else
-        \vspace{7cm}
+        \vspace{5cm}
     \fi
 
     \begin{center}
-        \bfseries Брест 2024
+        \bfseries Брест 2025
     \end{center}
 
 \end{titlepage}
