--- a/5_chapter2.tex
+++ b/5_chapter2.tex
@@ -113,7 +113,7 @@
 
 \begin{figure}[ht]
  \centering
-		\includegraphics[height =6 cm, keepaspectratio]{images/Figure_3(small).png}
+		\includegraphics[height =6 cm, keepaspectratio]{images/Figure_3.png}
 		\caption{ \textbf{Рис. 2.3.2} Задача (2.7) не имеет решения, поскольку граница ограничения недопустима }
 	\end{figure}
     
@@ -126,7 +126,7 @@
 
 \begin{figure}[ht]
  \centering
-		\includegraphics[height =15 cm, keepaspectratio]{images/Figure4.png}
+		\includegraphics[height =15 cm, keepaspectratio]{images/Figure_4.png}
 		\caption{ \textbf{Рис. 2.4.1} Примеры критических точек одномерной функции, представляющих интерес для алгоритмов оптимизации (в которых производная равна нулю)
  }
 	\end{figure}
