add first version

--- a/src/main.tex
+++ b/src/main.tex
@@ -101,6 +101,7 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 \usepackage{mathtools} % Use \rcases
 \usepackage{longtable, array}
 \usepackage{graphicx, epsfig}
+\usepackage{tabularx}
 
 \usepackage{algorithm}        % Для вставки псевдокода
 \usepackage{algpseudocode}    % Для вставки псевдокода
