--- a/src/main.tex
+++ b/src/main.tex
@@ -151,6 +151,7 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 
 \include{chapters/chapter_1}
 \include{chapters/chapter_2}
+\include{chapters/chapter_3}
 
 \zlabel{lastpagetocount}
 
