--- a/src/main.tex
+++ b/src/main.tex
@@ -113,6 +113,39 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 
 \usepackage{tikz} % Language for producing vector graphics
 
+\usepackage{listings}
+\usepackage{xcolor}
+
+\lstdefinelanguage{Java}{
+  morekeywords={abstract, assert, boolean, break, byte, case, catch, char,
+    class, const, continue, default, do, double, else, enum, extends,
+    final, finally, float, for, goto, if, implements, import, instanceof,
+    int, interface, long, native, new, package, private, protected, public,
+    return, short, static, strictfp, super, switch, synchronized, this,
+    throw, throws, transient, try, void, volatile, while},
+  sensitive=true,
+  morecomment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  morestring=[b]",
+}
+
+\lstset{
+  language=Java,
+  basicstyle=\ttfamily\small,
+  keywordstyle=\color{blue},
+  commentstyle=\color{gray},
+  stringstyle=\color{orange},
+  numbers=left,
+  numberstyle=\tiny\color{gray},
+  stepnumber=1,
+  numbersep=5pt,
+  frame=single,
+  breaklines=true,
+  captionpos=b,
+  tabsize=4,
+  showstringspaces=false
+}
+
 \begin{document}
 
 % Регистрируем счётчики в системе "totcount".
