--- a/src/main.tex
+++ b/src/main.tex
@@ -128,18 +128,22 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
   morecomment=[s]{/*}{*/},
   morestring=[b]",
 }
-
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
 \lstset{
   language=Java,
-  basicstyle=\ttfamily\small,
+  basicstyle=\ttfamily\footnotesize,
   keywordstyle=\color{blue},
-  commentstyle=\color{gray},
-  stringstyle=\color{orange},
+  commentstyle=\color{codegreen},
+  stringstyle=\color{codepurple},
   numbers=left,
   numberstyle=\tiny\color{gray},
   stepnumber=1,
   numbersep=5pt,
   frame=single,
+  breakatwhitespace=false, 
   breaklines=true,
   captionpos=b,
   tabsize=4,
