--- a/src/references.bib
+++ b/src/references.bib
@@ -8,3 +8,26 @@
   isbn      = {978-5-907144-76-7},
   language  = {russian}
 }
+@online{habrseq2seq,
+  author       = {OTUS},
+  title        = {Seq2Seq-модели},
+  url          = {https://habr.com/ru/companies/otus/articles/816341/},
+  urldate      = {2024-06-04},
+  note         = {Дата обращения: 17.05.2025}
+}
+https://huggingface.co/learn/audio-course/ru/chapter3/seq2seq
+@online{huggingfaceseq2seq,
+  author       = {Artyom Boyko},
+  title        = {Архитектуры Seq2Seq},
+  url          = {https://huggingface.co/learn/audio-course/ru/chapter3/seq2seq},
+  urldate      = {2023-06-05},
+  note         = {Дата обращения: 10.04.2025}
+}
+@online{timefold2024docs,
+  author       = {{Timefold}},
+  title        = {Timefold Documentation},
+  year         = {2024},
+  url          = {https://docs.timefold.ai},
+  urldate      = {2025-06-17},
+  note         = {Официальная документация планировщика Timefold. Дата обращения: 17.06.2025}
+}
