added chapter 5, conclusion and images

--- a/src/main.tex
+++ b/src/main.tex
@@ -202,10 +202,12 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 \include{chapters/chapter_2}
 \include{chapters/chapter_3}
 \include{chapters/chapter_4}
+\include{chapters/chapter_5}
 
 \include{chapters/conclusion}
 \zlabel{lastpagetocount}
 
-\printbibliography
+\addcontentsline{toc}{section}{СПИСОК ЛИТЕРАТУРЫ}
+\printbibliography[title={СПИСОК ЛИТЕРАТУРЫ}]
 
 \end{document}
