--- a/src/references.bib
+++ b/src/references.bib
@@ -20,14 +20,63 @@ https://huggingface.co/learn/audio-course/ru/chapter3/seq2seq
   author       = {Artyom Boyko},
   title        = {Архитектуры Seq2Seq},
   url          = {https://huggingface.co/learn/audio-course/ru/chapter3/seq2seq},
-  urldate      = {2023-06-05},
   note         = {Дата обращения: 10.04.2025}
 }
-@online{timefold2024docs,
+@online{timefold2025docs,
   author       = {{Timefold}},
   title        = {Timefold Documentation},
-  year         = {2024},
+  year         = {2025},
   url          = {https://docs.timefold.ai},
-  urldate      = {2025-06-17},
-  note         = {Официальная документация планировщика Timefold. Дата обращения: 17.06.2025}
+  note         = {Официальная документация планировщика Timefold. Дата обращения: 03.06.2025}
 }
+@online{react2025docs,
+  author       = {{Meta Platforms, Inc.}},
+  title        = {React Documentation},
+  year         = {2025},
+  url          = {https://react.dev},
+  note         = {Официальная документация библиотеки React. Дата обращения: 01.06.2025-06}
+}
+@online{nextjs2025docs,
+  author       = {{Vercel Inc.}},
+  title        = {Next.js Documentation},
+  year         = {2025},
+  url          = {https://nextjs.org/docs},
+  note         = {Официальная документация фреймворка Next.js. Дата обращения: 05.06.2025}
+}
+@online{maven2025docs,
+  author       = {{Apache Software Foundation}},
+  title        = {Maven Documentation},
+  year         = {2025},
+  url          = {https://maven.apache.org/guides/index.html},
+  note         = {Официальная документация системы сборки Maven. Дата обращения: 11.04.2025-04}
+}
+@online{java2025docs,
+  author       = {{Oracle Corporation}},
+  title        = {Java SE Documentation},
+  year         = {2025},
+  url          = {https://docs.oracle.com/en/java/javase/17/},
+  note         = {Официальная документация языка программирования Java. Дата обращения: 17.05.2025}
+}
+@online{quarkus2025docs,
+  author       = {{Red Hat, Inc.}},
+  title        = {Quarkus Documentation},
+  year         = {2025},
+  url          = {https://quarkus.io/guides/},
+  note         = {Официальная документация фреймворка Quarkus. Дата обращения: 05.05.2025}
+}
+@online{fastapi2025docs,
+  author       = {{Sebastián Ramírez}},
+  title        = {FastAPI Documentation},
+  year         = {2025},
+  url          = {https://fastapi.tiangolo.com},
+  note         = {Официальная документация веб-фреймворка FastAPI. Дата обращения: 10.03.2025}
+}
+@online{docker2025docs,
+  author       = {{Docker Inc.}},
+  title        = {Docker Documentation},
+  year         = {2025},
+  url          = {https://docs.docker.com},
+  note         = {Официальная документация по платформе Docker. Дата обращения: 16.05.2025}
+}
+
+
